--- a/Monaco.csproj
+++ b/Monaco.csproj
@@ -20,4 +20,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+    <ItemGroup>
+      <Content Include="Source\**">
+         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
 </Project>
